--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</div>
 				
 				<div class="hidden" id="form">
-					<ul id="form">
+					<ul id="donateForm">
 						<form action="https://formspree.io/learicist@gmail.com" method="post">
 							<!-- <li>
 							  <input class="textbox" name="name" type="text" placeholder="Name" required>
@@ -94,7 +94,7 @@
 							  <input class="textbox" name="email" type="text" placeholder="Email Address" required>
 							</li>
 							<li>
-							  <input class="textbox" name="subject" type="text" placeholder="Subject" required>
+							  <input class="textbox" name="amount" type="text" placeholder="Amount" required>
 							</li>
 							<li>
 							  <textarea class="textbox" name="message" rows="4" cols="23" id="messagebox" type="text" placeholder="Message" required></textarea>
