beginning of record changing functions

--- a/index.html
+++ b/index.html
@@ -62,24 +62,19 @@
 				<div class="card3 col-sm-4" id="contributions">
 					<p style="text-decoration: underline; ">History</p>
 					<ul id="history">
-						<br>
-						<li>$100 --> M. Leary, 9.1.19</li>
+						<li>$100 --> M. Leary</li>
+						<li>$25 --> V. Domenick</li>
 					</ul>				
 				</div>
 				
 				<div class="card3 col-sm-4" id="total">
-					<p style="text-decoration: underline; ">Total</p>
+					<p style="text-decoration: underline;">Total</p>
 					<br>
-					<p style="font-size: 1.2em; ">$100.00</p>
+					<p style="font-size: 1.2em; ">$125.00</p>
 				</div>
 			</div>
 			
-			<div class="row" id="fourthRow">
-			
-				<!--DIV, BUTTON TO CONTRIBUTE
-				BUTTON GENERATES FORM
-				FORM EMAILS ME CONTACT INFO AND AMOUNT TO SET UP VENMO -->
-				
+			<div class="row" id="fourthRow">				
 				<div class="col-sm-4" id="submit">
 					<button id="btn">I want to help! Let's add to the cause.</button>
 				</div>
@@ -87,9 +82,9 @@
 				<div class="hidden" id="form">
 					<ul id="donateForm">
 						<form action="https://formspree.io/learicist@gmail.com" method="post">
-							<!-- <li>
+							<li>
 							  <input class="textbox" name="name" type="text" placeholder="Name" required>
-							</li> -->
+							</li>
 							<li>
 							  <input class="textbox" name="email" type="text" placeholder="Email Address" required>
 							</li>
